# png-encoder

./: CONTRIBUTING.md  README.md  package.json  react-native-png-encoder.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/pngencoder/: PngEncoderModule.java  PngEncoderModule.kt  PngEncoderPackage.java  PngEncoderPackage.kt
cpp/: MutableRawBuffer.h  fpng.cpp  fpng.h  react-native-png-encoder.cpp  react-native-png-encoder.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/pngencoder/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/PngEncoderExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/PngEncoderExample.xcodeproj/: project.pbxproj
example/ios/PngEncoderExample.xcodeproj/xcshareddata/xcschemes/: PngEncoderExample.xcscheme
example/ios/PngEncoderExample.xcworkspace/: contents.xcworkspacedata
example/ios/PngEncoderExampleTests/: PngEncoderExampleTests.m
example/src/: App.tsx  useAppState.ts
ios/: PngEncoder.h  PngEncoder.mm
src/: PngEncoderModule.ts  index.tsx
